# scaffoldmaker

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yaml  test-package.yml
docs/: conf.py  index.rst  install.rst
docs/scaffolds/: bladder.rst  brainstem.rst  colon.rst  esophagus.rst  heart.rst  lung.rst  lung2.rst  lung4.rst  smallintestine.rst  stomach.rst  uterus.rst  vagus.rst
mapclientplugins/meshgeneratorstep/: configuredialog.py  resources_rc.py  step.py  ui_configuredialog.py
scaffoldmaker/: __init__.py  scaffoldmaker.py  scaffoldpackage.py  scaffolds.py
scaffoldmaker/annotation/: annotationgroup.py
scaffoldmaker/meshtypes/: meshtype_1d_path1.py  meshtype_2d_plate1.py  meshtype_2d_platehole1.py  meshtype_2d_sphere1.py  meshtype_2d_tube1.py  meshtype_3d_bladder1.py  meshtype_3d_box1.py  meshtype_3d_boxhole1.py  meshtype_3d_centrallinetube1.py  meshtype_3d_colon1.py  meshtype_3d_colonsegment1.py  meshtype_3d_colonsegmentsimplemesentery1.py  meshtype_3d_colonsegmentteniacoli1.py  meshtype_3d_ellipticaltube1.py  meshtype_3d_ellipticcylinder1.py  meshtype_3d_haustra1.py  meshtype_3d_heart1.py  meshtype_3d_heart2.py  meshtype_3d_heartarterialroot1.py  meshtype_3d_heartatria1.py  (+16 more)
tests/: test_bladder.py  test_bladderurethra.py  test_brainstem.py  test_capmesh.py  test_cecum.py  test_colon.py  test_colonsegment.py  test_cylinder.py  test_ellipsoid.py  test_esophagus.py  test_gastrointestinaltract1.py  test_general.py  test_heart.py  test_kidney.py  test_lung.py  test_muscle.py  test_network.py  test_renalcapsule.py  test_renalpelvis.py  test_smallintestine.py  test_smallintestines.py  test_sphere.py  test_spinalnerve.py  test_stomach.py  test_trigeminalnerve.py  test_uterus.py  test_vagus.py  test_wholebody1.py  test_wholebody2.py  testutils.py
(+202 files in other folders)
